WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300178
Release assert in WebPageProxy::continueNavigationInNewProcess when enabling shared process for site isolation
https://bugs.webkit.org/show_bug.cgi?id=300178
Summary
Release assert in WebPageProxy::continueNavigationInNewProcess when enabling ...
Ryosuke Niwa
Reported
2025-10-04 13:17:36 PDT
e.g. 0 WebKit 0x10772b368 WebKit::WebPageProxy::continueNavigationInNewProcess(API::Navigation&, WebKit::WebFrameProxy&, WTF::RefPtr<WebKit::SuspendedPageProxy, WTF::RawPtrTraits<WebKit::SuspendedPageProxy>, WTF::DefaultRefDerefTraits<WebKit::SuspendedPageProxy>>&&, WebKit::BrowsingContextGroup&, WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::ProcessSwapRequestedByClient, WebCore::ShouldTreatAsContinuingLoad, std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::NetworkResourceLoadIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::LoadedWebArchive, WebCore::IsPerformingHTTPFallback, WebCore::ProcessSwapDisposition, WebKit::WebsiteDataStore*) + 2616 1 WebKit 0x10777b2f0 WebKit::WebPageProxy::receivedNavigationActionPolicyDecision(WebKit::WebProcessProxy&, WebCore::PolicyAction, API::Navigation&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::ProcessSwapRequestedByClient, WebKit::WebFrameProxy&, WebKit::FrameInfoData const&, WebKit::WasNavigationIntercepted, std::__1::optional<WebKit::PolicyDecisionConsoleMessage>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_0::operator()(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) + 1800 2 WebKit 0x10777ab38 WTF::Detail::CallableWrapper<WebKit::WebPageProxy::receivedNavigationActionPolicyDecision(WebKit::WebProcessProxy&, WebCore::PolicyAction, API::Navigation&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::ProcessSwapRequestedByClient, WebKit::WebFrameProxy&, WebKit::FrameInfoData const&, WebKit::WasNavigationIntercepted, std::__1::optional<WebKit::PolicyDecisionConsoleMessage>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_1, void, WebKit::FrameProcess*>::call(WebKit::FrameProcess*) + 836 3 WebKit 0x1076c9104 WTF::Detail::CallableWrapper<WebKit::BrowsingContextGroup::sharedProcessForSite(WebKit::WebsiteDataStore&, API::WebsitePolicies*, WebKit::WebPreferences const&, WebCore::Site const&, WebCore::Site const&, WebKit::WebProcessProxy::LockdownMode, WebKit::WebProcessProxy::EnhancedSecurity, API::PageConfiguration&, WebKit::IsMainFrame, WTF::CompletionHandler<void (WebKit::FrameProcess*)>&&)::$_0, void, WTF::HashSet<WebCore::RegistrableDomain, WTF::DefaultHash<WebCore::RegistrableDomain>, WTF::HashTraits<WebCore::RegistrableDomain>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1> const&>::call(WTF::HashSet<WebCore::RegistrableDomain, WTF::DefaultHash<WebCore::RegistrableDomain>, WTF::HashTraits<WebCore::RegistrableDomain>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1> const&) + 760 4 WebKit 0x1078b3c98 WebKit::WebsiteDataStore::fetchDomainsWithUserInteraction(WTF::CompletionHandler<void (WTF::HashSet<WebCore::RegistrableDomain, WTF::DefaultHash<WebCore::RegistrableDomain>, WTF::HashTraits<WebCore::RegistrableDomain>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1> const&)>&&) + 100 5 WebKit 0x1076be1fc WebKit::BrowsingContextGroup::sharedProcessForSite(WebKit::WebsiteDataStore&, API::WebsitePolicies*, WebKit::WebPreferences const&, WebCore::Site const&, WebCore::Site const&, WebKit::WebProcessProxy::LockdownMode, WebKit::WebProcessProxy::EnhancedSecurity, API::PageConfiguration&, WebKit::IsMainFrame, WTF::CompletionHandler<void (WebKit::FrameProcess*)>&&) + 632 6 WebKit 0x107787dc0 WebKit::WebPageProxy::decidePolicyForNavigationAction(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::WebFrameProxy&, WebKit::NavigationActionData&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_0::operator()(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted)::'lambda'(WebCore::PolicyAction)::operator()(WebCore::PolicyAction) + 6260 7 WebKit 0x10778650c WTF::Detail::CallableWrapper<WebKit::WebPageProxy::decidePolicyForNavigationAction(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::WebFrameProxy&, WebKit::NavigationActionData&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_0, void, WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted>::call(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) + 2368 8 WebKit 0x107706d7c WTF::Detail::CallableWrapper<WebKit::WebFrameProxy::setUpPolicyListenerProxy(WTF::CompletionHandler<void (WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted)>&&, WebKit::ShouldExpectSafeBrowsingResult, WebKit::ShouldExpectAppBoundDomainResult, WebKit::ShouldWaitForInitialLinkDecorationFilteringData)::$_0, void, WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted>::call(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) + 276 9 WebKit 0x1076fee78 WebKit::WebFramePolicyListenerProxy::use(API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient) + 144 10 WebKit 0x10747e3e0 WTF::Detail::CallableWrapper<WebKit::SOAuthorizationCoordinator::tryAuthorize(WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::WebPageProxy&, WTF::Function<void (bool)>&&)::$_0, void, bool>::call(bool) + 304 11 WebKit 0x106c627c4 WTF::Function<void (bool)>::operator()(bool) const + 92
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2025-10-04 13:17:58 PDT
<
rdar://161938556
>
Ryosuke Niwa
Comment 2
2025-10-04 13:26:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51816
EWS
Comment 3
2025-10-06 10:57:24 PDT
Committed
301070@main
(9c5dd91ddbc2): <
https://commits.webkit.org/301070@main
> Reviewed commits have been landed. Closing PR #51816 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug