Release assert in WebPageProxy::continueNavigationInNewProcess when enabling shared process for site isolation https://bugs.webkit.org/show_bug.cgi?id=300178

Reviewed by Sihui Liu.

The assertion failure was caused by the race between destructing FrameProcess for the old subframes and using
the same FrameProcess for the new subframes. Fixed the bug by extending the lifetime of a shared process until
the end of the current navigation by storing it in API::Navigation. Also add a bunch of other debug assertions
to diagnose this issue more easily in the future.

Test: TestWebKitAPI.SiteIsolation.SharedProcessBasicWebProcessCacheCrash

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm
* Source/WebKit/UIProcess/API/APINavigation.cpp:
(API::Navigation::setPendingSharedProcess):
* Source/WebKit/UIProcess/API/APINavigation.h:
* Source/WebKit/UIProcess/BrowsingContextGroup.cpp:
(WebKit::BrowsingContextGroup::sharedProcessForSite):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::receivedNavigationActionPolicyDecision):
* Source/WebKit/UIProcess/WebProcessCache.cpp:
(WebKit::WebProcessCache::removeProcess):
* Source/WebKit/UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::processForSite):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::(SiteIsolation, SharedProcessBasicWebProcessCacheCrash)):

Canonical link: https://commits.webkit.org/301070@main